--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1>A Tropa do Mal!!!</h1>
 <hr>
-<p>Aqui é onde o filho chora e a mãe nãao vê, aqui é onde tudo de ruim nasce, cresce e NÃO MORRE!!!! Se prepare, pois aqui a lapada é forte!!!!!!</p>
+<p>Aqui é onde o filho chora e a mãe não vê, aqui é onde tudo de ruim nasce, cresce e NÃO MORRE!!!! Se prepare, pois aqui a lapada é forte!!!!!!</p>
 </body>
 <a href="https://youtu.be/jBwmQMdBpfU?si=QbBdPk4GjjK5bpXe" ><input type="button" value="Não click aqui!!!"></a>
 
